fix: nav overflow on mobile

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -15,6 +15,7 @@
 html {
   hanging-punctuation: first last;
   color-scheme: light dark;
+  overflow-x: hidden;
 }
 
 body {
